Update stylings and fix bug with account recipe modal not showing up for custom recipes

--- a/src/About.css
+++ b/src/About.css
@@ -76,5 +76,6 @@ section {
       display: flex;
       justify-content: center;
       font-size: 5rem;
+      color: white;
     }
     
